--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "webpack-dev-server --hot",
     "release": "rm -rf dist/* && webpack --progress --config webpack.release.js",
     "build": "yarn release",
-    "serve": "http-server dist/ -s"
+    "serve": "http-server dist/ -s",
+    "postinstall": "rm -rfv node_modules/@types/react-*/node_modules/@types/react"
   },
   "keywords": [],
   "author": "",
@@ -28,6 +29,7 @@
     "history": "^4.6.1",
     "html-webpack-plugin": "^3.2.0",
     "http-server": "^0.11.0",
+    "immer": "^1.3.1",
     "lodash": "^4.17.10",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
